force-app/main/default/objects/League_Partnership__c/League_Partnership__c.object-meta.xml
<CustomObject>
    <description>Tracks official league partnerships with data access, exclusivity, and women's league partnerships</description>
    <label>League Partnership</label>
    <nameField>
        <displayFormat>LEAGUE-{0000}</displayFormat>
        <label>League Partnership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>League Partnerships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>