force-app/main/default/objects/League_Partnership__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>Lookup</type>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>League Partnerships</relationshipLabel>
    <relationshipName>League_Partnerships</relationshipName>
    <description>Partner league/competition</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>