force-app/main/default/objects/League_Partnership__c/fields/Data_Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Data_Access_Level__c</fullName>
    <label>Data Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Real-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Level of data access granted in this partnership</description>
</CustomField>