force-app/main/default/objects/League_Partnership__c/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <label>Exclusivity</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is an exclusive partnership</description>
</CustomField>