force-app/main/default/objects/League_Partnership__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>League Partnerships</relationshipLabel>
    <relationshipName>League_Partnerships</relationshipName>
    <description>Related sales opportunity</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>