force-app/main/default/objects/League_Partnership__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>League Partnerships</relationshipLabel>
    <relationshipName>League_Partnerships</relationshipName>
    <description>Partner organization for this league partnership</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>