force-app/main/default/objects/League_Partnership__c/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <label>Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Official Stats Provider</fullName>
            </value>
            <value>
                <fullName>Official Content Provider</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Data Partner</fullName>
                <default>true</default>
                <label>Data Partner</label>
            </value>
            <value>
                <fullName>Media Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of league partnership</description>
</CustomField>