force-app/main/default/objects/League_Partnership__c/fields/Revenue_Stream__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Stream__c</fullName>
    <label>Revenue Stream</label>
    <type>Lookup</type>
    <referenceTo>Revenue_Stream__c</referenceTo>
    <relationshipLabel>League Partnerships</relationshipLabel>
    <relationshipName>League_Partnerships</relationshipName>
    <description>Related revenue stream</description>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>